[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.5.3"
rand = "0.8.4"
anyhow = "1.0.52"
thiserror = "1.0.30"
itertools = "0.10.3"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.19" }
