[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.5.3"
rand = "0.8.4"
regex = "1.5.4"
midir = "0.7.0"
anyhow = "1.0.52"
thiserror = "1.0.30"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.9", features = ["derive"] }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.19" }
